--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,12 @@
     </properties>
 
     <dependencies>
+        <!-- apache commons -->
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-collections4</artifactId>
+            <version>4.1</version>
+        </dependency>
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
