--- a/pom.xml
+++ b/pom.xml
@@ -50,6 +50,11 @@
                     <target>1.6</target>
                 </configuration>
             </plugin>
+            <plugin>
+                <groupId>org.jacoco</groupId>
+                <artifactId>jacoco-maven-plugin</artifactId>
+                <version>0.7.9</version>
+            </plugin>
         </plugins>
     </build>
 </project>
