--- a/pom.xml
+++ b/pom.xml
@@ -3,11 +3,14 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>org.zhenchao</groupId>
-    <artifactId>algorithm4j</artifactId>
-    <version>1.0.0</version>
-    <packaging>jar</packaging>
+    <artifactId>algorithm-design</artifactId>
+    <version>1.0.0-SNAPSHOT</version>
+    <modules>
+        <module>algorithm4s</module>
+    </modules>
+    <packaging>pom</packaging>
 
-    <name>algorithm4j</name>
+    <name>algorithm-design</name>
     <url>http://www.zhenchao.org</url>
 
     <properties>
@@ -41,19 +44,13 @@
     <build>
         <plugins>
             <plugin>
-                <!-- 编译插件 -->
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
-                <version>2.4</version>
+                <version>3.7.0</version>
                 <configuration>
-                    <source>1.6</source>
-                    <target>1.6</target>
+                    <source>1.8</source>
+                    <target>1.8</target>
                 </configuration>
-            </plugin>
-            <plugin>
-                <groupId>org.jacoco</groupId>
-                <artifactId>jacoco-maven-plugin</artifactId>
-                <version>0.7.9</version>
             </plugin>
         </plugins>
     </build>
